compiler/tests/fa/errors/pure_vec_mut_fa.salam
// انتظار: خطا۰۱۲
// زبان: فارسی
خالص تابع پرکن(n صحیح۳۲) صحیح۳۲:
    متغیر v Vector<صحیح۳۲> = Vector {}
    v.push(n)
    بازگشت v.len()
پایان

تابع اصلی:
    چاپ(پرکن(3))
پایان
